utils/docker-compose/envoy-auth.yaml
---
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: upstream
                http_filters:
                  - name: envoy.filters.http.header_to_metadata
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
                      request_rules:
                        - header: x-dyn-user-id
                          on_header_present:
                            key: user_id
                            type: STRING
                          remove: false
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: kuadrant_wasm
                        root_id: kuadrant_wasm
                        vm_config:
                          vm_id: vm.sentinel.kuadrant_wasm
                          runtime: envoy.wasm.runtime.v8
                          code:
                            local:
                              filename: /opt/kuadrant/wasm/wasm_shim.wasm
                          allow_precompiled: true
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: >
                            {
                              "failureMode": "deny",
                              "rateLimitPolicies": [
                                {
                                  "name": "rlp-ns-A/rlp-name-A",
                                  "domain": "rlp-ns-A/rlp-name-A",
                                  "service": "authorino",
                                  "hostnames": ["*.a.com"],
                                  "rules": [
                                    {
                                      "data": [
                                        {
                                          "selector": {
                                            "selector": "unknown.path"
                                          }
                                        }
                                      ]
                                    }
                                  ]
                                },
                              ]
                            }
                  - name: envoy.filters.http.router
  clusters:
    - name: upstream
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upstream
                      port_value: 80
    - name: authorino
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      http2_protocol_options: { }
      load_assignment:
        cluster_name: authorino
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50051
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
